Add native image support, progress display, portable classpaths, and jar validation
- Support --native and --graalvm-home CLI options to compile build.jar to native binary
- Use -H:+AllowJRTFileSystem to bake JDK's jrt filesystem into native image
- Add ANSI progress bars showing overall module count and per-thread build phase
- Store dependency paths as $HOME/.m2/... instead of absolute paths for portability
- Resolve $HOME at runtime and validate all dependency jars exist before building
- Bundle jandex classes into build.jar when running from development mode
- Parse manifest entries, filter properties, and annotation processors from POMs
- Add README with build/usage instructions and JAVA_HOME version constraints

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>